перевод swagger для тормоза
